fix: Z-index issue in cards fixed.

--- a/src/components/features/AboutMe/HeroSection/HeroSection.module.sass
+++ b/src/components/features/AboutMe/HeroSection/HeroSection.module.sass
@@ -16,21 +16,9 @@
         max-width: 1280px
         margin: 0 auto
 
-    &__subtitle
-        display: inline-block
-        font-weight: bold
-        font-size: 1.25rem
-        margin-bottom: 1rem
-        color: #363d49cc
-
-        +tablet
-            font-size: 1.5rem
-
-        +desktop
-            font-size: 2rem
 
     &__title
-        font-size: 2.5rem
+        font-size: 2.5rem !important
         font-weight: bold
         color:#363d49cc
         margin-bottom: 1.5rem
@@ -42,6 +30,18 @@
         +desktop
             font-size: 5.5rem !important
 
+    &__subtitle
+        display: inline-block
+        font-weight: bold
+        font-size: 1.25rem !important
+        margin-bottom: 1rem
+        color: #363d49cc
+
+        +tablet
+            font-size: 1.5rem !important
+
+        +desktop
+            font-size: 2rem !important
     &__description
         font-size: 1.125rem
         line-height: 1.75
